# price-insight

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Makefile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  cache.py  celery_app.py  config.py  constants.py  database.py  deps.py  job_manager.py  logging.py  monitoring.py  scheduler.py  security.py
backend/app/core/alerts/: rules_engine.py
backend/app/core/deal_detection/: __init__.py  base_detector.py  deal_manager.py
backend/app/core/models/: __init__.py  alert.py  base.py  user.py
backend/app/core/notifications/: service.py
backend/app/core/routes/: auth.py  health.py  monitoring.py  notifications.py  scraping.py  status.py
backend/app/core/schemas/: auth.py  health.py  status.py
backend/app/core/scraping/: base_scraper.py  scraper_factory.py  scraper_manager.py  scraping_jobs.py
backend/app/core/services/: __init__.py  auth_service.py  background_tasks.py  email_service.py  notification_service.py
backend/app/core/tasks/: email_tasks.py  scraping_tasks.py
backend/app/ecommerce/: __init__.py
backend/app/ecommerce/jobs/: scrape_job.py
backend/app/ecommerce/models/: __init__.py  deal.py  deal_preference.py  price_history.py  product.py  watchlist.py
backend/app/ecommerce/routes/: analytics.py  deal_preferences.py  deals.py  export.py  price_analytics.py  product_search.py  products.py  watchlist.py
backend/app/ecommerce/schemas/: __init__.py  analytics.py  deal.py  deal_preference.py  price_analytics.py  product.py  watchlist.py
backend/app/ecommerce/services/: analytics_dashboard.py  change_detector.py  deal_detector.py  price_analytics.py  product_search.py  scraper_base.py  (+2 more)
backend/app/templates/: deal_notification.html  price_alert.html  welcome.html
backend/app/travel/: __init__.py
backend/app/utils/: currency.py  export.py  helpers.py  pagination.py  url_normalizer.py
backend/migrations/: env.py
backend/migrations/versions/: 29700f5e699e_initial_e_commerce_models.py  72556645b866_add_utilities_models.py  7c56ac9401ae_update_default_currency_from_usd_to_ngn.py  8495efcc0d86_add_travel_deals_and_alerts.py  a887bbdae614_add_real_estate_models.py  add_user_auth.py  add_watchlist_table.py  c92b6eaecdda_add_travel_models_with_tables.py  create_travel_deals_alerts.py  create_watchlist_table.py  d460a09e78ac_add_travel_price_history_table.py  d86ee8122545_merge_heads.py  f3acd36a9770_add_alert_rules_and_history_models.py  travel_price_history.py
backend/scripts/: add_indexes.py  test_scraper.py
backend/tests/: test_alerts.py  test_config.py  test_integration.py  test_real_estate.py  test_scrapers.py  test_services.py  test_travel_alerts.py  test_travel_integration.py  test_travel_scrapers.py  test_travel_services.py  test_travel_simple.py
(+185 files in other folders)
